Web_Scraping_Azerisupermarketchains

--- a/open_all_price_notebooks.ipynb
+++ b/open_all_price_notebooks.ipynb
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3f4e6d9c-b06a-4e0e-93da-2d93b2a8e683",
+   "execution_count": 9,
+   "id": "0e7b195f-8b67-4362-8dec-1d6e14c96b75",
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please enter the input directory (Neptun, BazarStore, or Bravo):  Neptun\n",
-      "Please enter the month (1-12):  6\n",
+      "Please enter the input directory (Neptun, BazarStore, or Bravo):  BazarStore\n",
+      "Please enter the month (1-12):  7\n",
       "Please enter the year:  2023\n"
      ]
     },
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to /Users/FaiqRasulov/Desktop/Qiymet_list/monthy_analysis/neptun_june_2023_sorted_2023-07-07.xlsx\n"
+      "Data saved to /Users/FaiqRasulov/Desktop/Qiymet_list/monthy_analysis/bazarstore_july_2023_sorted_2023-07-25.xlsx\n"
      ]
     },
     {
@@ -44,24 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to /Users/FaiqRasulov/Desktop/Qiymet_list/monthy_analysis/bazarstore_june_2023_sorted_2023-07-07.xlsx\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Do you want to run the program again? (yes or no):  yes\n",
-      "Please enter the input directory (Neptun, BazarStore, or Bravo):  Bravo\n",
-      "Please enter the month (1-12):  6\n",
-      "Please enter the year:  2023\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data saved to /Users/FaiqRasulov/Desktop/Qiymet_list/monthy_analysis/bravo_june_2023_sorted_2023-07-07.xlsx\n"
+      "Data saved to /Users/FaiqRasulov/Desktop/Qiymet_list/monthy_analysis/bazarstore_june_2023_sorted_2023-07-25.xlsx\n"
      ]
     },
     {
@@ -89,32 +72,48 @@
     "            print(\"Invalid input. Month and year must be integers.\")\n",
     "            continue\n",
     "\n",
-    "        # Map input_month to month name\n",
-    "        try:\n",
-    "            month_name = datetime.strptime(str(input_month), '%m').strftime('%B')\n",
-    "        except ValueError:\n",
-    "            print(\"Invalid input. Month must be between 1 and 12.\")\n",
-    "            continue\n",
+    "        month_name = datetime.strptime(str(input_month), '%m').strftime('%B')\n",
     "\n",
     "        # Get directory path based on input_dir\n",
+    "        directory = None\n",
+    "        directory_new = None\n",
     "        if input_dir.lower() == 'neptun':\n",
     "            directory = '/Users/FaiqRasulov/Desktop/Qiymet_list/Neptun/'\n",
     "        elif input_dir.lower() == 'bazarstore':\n",
     "            directory = '/Users/FaiqRasulov/Desktop/Qiymet_list/BazarStore/'\n",
+    "            directory_new = '/Users/FaiqRasulov/Desktop/Qiymet_list/BazarStoreYeni/'\n",
     "        elif input_dir.lower() == 'bravo':\n",
     "            directory = '/Users/FaiqRasulov/Desktop/Qiymet_list/Bravo/'\n",
     "        else:\n",
     "            print(\"Invalid input directory!\")\n",
     "            continue\n",
     "\n",
+    "        # Mapping of new columns to old columns\n",
+    "        columns_mapping = {\n",
+    "            'tarix': 'tarix',\n",
+    "            'brand': 'brand',\n",
+    "            'category': 'alt_kateqoriya',\n",
+    "            'name': 'mehsul_adi',\n",
+    "            'qramaj': 'qramaj',\n",
+    "            'yag_faiz': 'yag_faiz',\n",
+    "            'regular_price': 'ref_qiymet',\n",
+    "            'sale_price': 'endirimsiz_qiymet',\n",
+    "            'endirim_faiz': 'endirim_faiz',\n",
+    "            'link': 'link'\n",
+    "        }\n",
+    "\n",
     "        # Filter files based on input month and year\n",
     "        filtered_files = []\n",
-    "        for file in os.listdir(directory):\n",
-    "            if file.endswith('.xlsx'):\n",
-    "                date_str = file.split(' ')[-1].split('.')[0]\n",
-    "                day, month, year = map(int, date_str.split('-'))\n",
-    "                if month == input_month and year == input_year:\n",
-    "                    filtered_files.append(file)\n",
+    "        directories = [directory]\n",
+    "        if directory_new:\n",
+    "            directories.append(directory_new)\n",
+    "        for directory in directories:\n",
+    "            for file in os.listdir(directory):\n",
+    "                if file.endswith('.xlsx'):\n",
+    "                    date_str = file.split(' ')[-1].split('.')[0]\n",
+    "                    day, month, year = map(int, date_str.split('-'))\n",
+    "                    if month == input_month and year == input_year:\n",
+    "                        filtered_files.append(os.path.join(directory, file))\n",
     "\n",
     "        if not filtered_files:\n",
     "            print(f\"No files found for {month_name} {input_year} in {input_dir} directory.\")\n",
@@ -123,7 +122,10 @@
     "        # Concatenate data frames\n",
     "        df_list = []\n",
     "        for file in filtered_files:\n",
-    "            df = pd.read_excel(os.path.join(directory, file), engine='openpyxl')\n",
+    "            df = pd.read_excel(file, engine='openpyxl')\n",
+    "            if directory_new and os.path.dirname(file) == directory_new:\n",
+    "                # rename columns for new format files\n",
+    "                df.rename(columns=columns_mapping, inplace=True)\n",
     "            df_list.append(df)\n",
     "        df = pd.concat(df_list, ignore_index=True)\n",
     "\n",
@@ -145,15 +147,14 @@
     "                return\n",
     "            else:\n",
     "                print(\"Invalid input. Please enter 'yes' or 'no'.\")\n",
-    "\n",
-    "\n",
+    "                \n",
     "filter_and_concat_data()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b33551-c8e3-473a-957f-23cd4578a979",
+   "id": "0007a4d5-98d2-4d4a-8f1b-7cb97a539327",
    "metadata": {},
    "outputs": [],
    "source": []
