--- a/run_all_price_scripts.ipynb
+++ b/run_all_price_scripts.ipynb
@@ -16,12 +16,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24cae7e3b36744d586bcbb276dd8064f",
+       "model_id": "198699effffe48d7bac3c7859177b696",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Executing:   0%|          | 0/21 [00:00<?, ?cell/s]"
+       "Executing:   0%|          | 0/17 [00:00<?, ?cell/s]"
       ]
      },
      "metadata": {},
@@ -30,12 +30,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bbb636a8a5f4da58dcb320d6c377c46",
+       "model_id": "084067683a6946cc893a5fa6502bee92",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Executing:   0%|          | 0/20 [00:00<?, ?cell/s]"
+       "Executing:   0%|          | 0/11 [00:00<?, ?cell/s]"
       ]
      },
      "metadata": {},
@@ -44,12 +44,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e88f760bd6940c88b93987f9d413fd2",
+       "model_id": "b2e35ac87a4945c097757a7f6c9e85bc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Executing:   0%|          | 0/12 [00:00<?, ?cell/s]"
+       "Executing:   0%|          | 0/11 [00:00<?, ?cell/s]"
       ]
      },
      "metadata": {},
@@ -59,14 +59,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Executing notebooks: 100%|██████████| 3/3 [17:57<00:00, 359.27s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Papermill execution complete.\n"
+      "Executing notebooks:  67%|██████▋   | 2/3 [16:14<09:02, 542.50s/it]"
      ]
     }
    ],
@@ -79,7 +72,7 @@
     "from datetime import datetime, timedelta\n",
     "from tqdm import tqdm\n",
     "\n",
-    "notebooks = ['Bravo_Selenium.ipynb', 'Neptun_Scrape.ipynb', 'Bazarstore_Selenium.ipynb']\n",
+    "notebooks = ['Bravo_Selenium.ipynb', 'Neptun_Scrape.ipynb', 'BazarStore_new.ipynb']\n",
     "\n",
     "interval_in_seconds = 86400  # 24 hours\n",
     "last_execution_time = datetime.now()\n",
